--- a/Jbcmp/Jbcmp/Jbcmp.csproj
+++ b/Jbcmp/Jbcmp/Jbcmp.csproj
@@ -36,16 +36,35 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="Models\JbcmpDjlx.cs" />
+    <Compile Include="OA\Models\HsOAActionKeys.cs" />
+    <Compile Include="OA\Models\HsOADjlx.cs" />
+    <Compile Include="OA\Models\HsOAFuncKey.cs" />
+    <Compile Include="OA\Utilities\HsOAWSUtil.cs" />
+    <Compile Include="OA\Workflow\Enums.cs" />
     <Compile Include="OA\Workflow\UI\Page\Form_HsDbsx_Operation.cs" />
+    <Compile Include="OA\Workflow\UI\Page\Form_HsLcdj.cs" />
     <Compile Include="OA\Workflow\UI\Page\Form_HsLcspjl_Base.cs" />
     <Compile Include="OA\Workflow\UI\Page\Form_HsLcspjl_Show.cs" />
+    <Compile Include="OA\UI\Page\Form_HsOAMain.cs" />
     <Compile Include="OA\Workflow\UI\Page\Panel_HsLcspjl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Page\Form_SdrdMain.cs" />
-    <Compile Include="OA\Utilities\HSOAWSUtl.cs" />
+    <Compile Include="UI\Page\Form_JbCgspd_Base.cs" />
+    <Compile Include="UI\Page\Form_JbcmpMain.cs" />
+    <Compile Include="UI\Page\Form_JbCgspd_Operation.cs" />
+    <Compile Include="UI\Page\Panel_JbCpspd.cs" />
     <Compile Include="Utilities\JbcmpWSUtil.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FormsPlugin.Iconize, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.FormsPlugin.Iconize.1.0.10\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\FormsPlugin.Iconize.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Net_3rd_lib\Json\Json70r1\Portable40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.Iconize, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Xam.Plugin.Iconize.1.0.10\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Plugin.Iconize.dll</HintPath>
+    </Reference>
     <Reference Include="System.IO.Compression, Version=3.9.85.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Bcl.Compression.3.9.85\lib\portable-net45+wp8+wpa81\System.IO.Compression.dll</HintPath>
     </Reference>
