--- a/HsFramework/HsFramework.csproj
+++ b/HsFramework/HsFramework.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Framework\Extentsions\DateTimeExtension.cs" />
     <Compile Include="Framework\Extentsions\EnumExtension.cs" />
     <Compile Include="Framework\Extentsions\ExceptionExtension.cs" />
+    <Compile Include="Framework\Extentsions\MenuItemExtension.cs" />
     <Compile Include="Framework\Extentsions\NumberExtension.cs" />
     <Compile Include="Framework\Extentsions\StringExtension.cs" />
     <Compile Include="Framework\Extentsions\XElementExtension.cs" />
@@ -177,6 +178,9 @@
     </Reference>
     <Reference Include="FormsPlugin.Iconize, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xam.FormsPlugin.Iconize.1.0.10\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\FormsPlugin.Iconize.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\Net_3rd_lib\Json\Json70r1\Portable40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Plugin.Iconize, Version=1.0.10.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Xam.Plugin.Iconize.1.0.10\lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Plugin.Iconize.dll</HintPath>
