--- a/Jbcmp/Jbcmp.iOS/packages.config
+++ b/Jbcmp/Jbcmp.iOS/packages.config
@@ -7,6 +7,9 @@
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="xamarinios10" />
   <package id="Splat" version="1.6.2" targetFramework="xamarinios10" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Xam.FormsPlugin.Iconize" version="1.0.10" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Iconize" version="1.0.10" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Iconize.Ionicons" version="1.0.10" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="xamarinios10" />
 </packages>
