--- a/Jbcmp/Jbcmp.iOS/Info.plist
+++ b/Jbcmp/Jbcmp.iOS/Info.plist
@@ -35,5 +35,11 @@
 	<array>
 		<string>iconize-ionicons.ttf</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to the camera to take photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photos.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to microphone.</string>
 </dict>
 </plist>
