--- a/Jbcmp/Jbcmp/packages.config
+++ b/Jbcmp/Jbcmp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable45-net45+wp8" />
   <package id="Microsoft.Bcl.Compression" version="3.9.85" targetFramework="portable45-net45+wp8" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="portable45-net45+wp8" />
   <package id="Xam.FormsPlugin.Iconize" version="1.0.10" targetFramework="portable45-net45+wp8" />
   <package id="Xam.Plugin.Iconize" version="1.0.10" targetFramework="portable45-net45+wp8" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="portable45-net45+wp8" />
