--- a/Jbcmp/Jbcmp.iOS/Info.plist
+++ b/Jbcmp/Jbcmp.iOS/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Jbcmp</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.Jbcmp</string>
+	<string>cn.com.jiabaoruye.jbcmp</string>
 	<key>CFBundleVersion</key>
 	<string>2017.4.13.1</string>
 	<key>CFBundleIconFiles</key>
