--- a/Jbcmp/Jbcmp/Jbcmp.csproj
+++ b/Jbcmp/Jbcmp/Jbcmp.csproj
@@ -38,17 +38,6 @@
     <Compile Include="App.cs" />
     <Compile Include="Models\JbcmpDjlx.cs" />
     <Compile Include="Models\JbcmpFuncKey.cs" />
-    <Compile Include="OA\Models\HsOAActionKeys.cs" />
-    <Compile Include="OA\Models\HsOADjlx.cs" />
-    <Compile Include="OA\Models\HsOAFuncKey.cs" />
-    <Compile Include="OA\Utilities\HsOAWSUtil.cs" />
-    <Compile Include="OA\Workflow\Enums.cs" />
-    <Compile Include="OA\Workflow\UI\Page\Form_HsDbsx_Operation.cs" />
-    <Compile Include="OA\Workflow\UI\Page\Form_HsLcdj.cs" />
-    <Compile Include="OA\Workflow\UI\Page\Form_HsLcspjl_Base.cs" />
-    <Compile Include="OA\Workflow\UI\Page\Form_HsLcspjl_Show.cs" />
-    <Compile Include="OA\UI\Page\Form_HsOAMain.cs" />
-    <Compile Include="OA\Workflow\UI\Page\Panel_HsLcspjl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\Page\Form_JbCgspd_Base.cs" />
     <Compile Include="UI\Page\Form_JbCgspd_Query.cs" />
@@ -97,6 +86,10 @@
     <ProjectReference Include="..\..\HsFramework\HsFramework.csproj">
       <Project>{67f9d3a8-f71e-4428-913f-c37ae82cdb24}</Project>
       <Name>HsFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HsOA\HsOA.csproj">
+      <Project>{dde30ec7-fb9c-4018-8335-bcfc5f7dc22c}</Project>
+      <Name>HsOA</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
