--- a/Sdrd/Sdrd/Sdrd.csproj
+++ b/Sdrd/Sdrd/Sdrd.csproj
@@ -119,6 +119,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Imgs\sdrd_welcome.png" />
     <Content Include="部署说明.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
