--- a/Jbcmp/Jbcmp.iOS/Info.plist
+++ b/Jbcmp/Jbcmp.iOS/Info.plist
@@ -18,15 +18,13 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>10.3</string>
+	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>Jbcmp</string>
 	<key>CFBundleIdentifier</key>
 	<string>cn.com.jiabaoruye.jbcmp</string>
 	<key>CFBundleVersion</key>
-	<string>2017.4.13.1</string>
-	<key>CFBundleIconFiles</key>
-	<array/>
+	<string>2017.4.22.1</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleShortVersionString</key>
@@ -41,5 +39,11 @@
 	<string>This app needs access to photos.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to microphone.</string>
+	<key>CFBundleName</key>
+	<string>Jbcmp</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 </dict>
 </plist>
