--- a/Sdrd/Sdrd.iOS/Info.plist
+++ b/Sdrd/Sdrd.iOS/Info.plist
@@ -35,8 +35,6 @@
 	<string>This app needs access to photos.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs access to microphone.</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2017.4.25.1</string>
 	<key>UIPrerenderedIcon</key>
 	<false/>
 	<key>UILaunchStoryboardName</key>
@@ -52,5 +50,7 @@
 	</array>
 	<key>CFBundleName</key>
 	<string>山东热电</string>
+	<key>CFBundleVersion</key>
+	<string>2017.4.26.1</string>
 </dict>
 </plist>
