* IPlatformExtension.cs: modify update func
* App.cs:
* Info.plist:
* Info.plist:
* Sdrd.iOS.csproj:
* HsFramework.csproj:
* HsFramwork.IOS.csproj:
* IOSPlatformExtension.cs:
* UcWebView.cs:
* Panel_Login.cs:
* UcWebViewRenderer.cs:
* UcDetailPage_File.cs:
* Panel_PreviewFile.cs:

--- a/HsFramework/HsFramework.csproj
+++ b/HsFramework/HsFramework.csproj
@@ -117,6 +117,8 @@
     <Compile Include="Framework\Utilities\HsZlib.cs" />
     <Compile Include="Framework\Utilities\UcControlHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Framework\UI\Pages\Panel_PreviewFile.cs" />
+    <Compile Include="Framework\UI\Views\UcWebView.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Framework\Assets\Imgs\icon_1.png" />
