--- a/Sdrd/Sdrd.iOS/Info.plist
+++ b/Sdrd/Sdrd.iOS/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
+		<integer>2</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
@@ -15,7 +16,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>MinimumOSVersion</key>
-	<string>10.3</string>
+	<string>8.0</string>
 	<key>CFBundleIdentifier</key>
 	<string>hungsum.sdrd</string>
 	<key>CFBundleIconFiles</key>
@@ -51,6 +52,6 @@
 	<key>CFBundleName</key>
 	<string>山东热电</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2017.5.6.1</string>
+	<string>2017.5.23.1</string>
 </dict>
 </plist>
