--- a/Sdrd/Sdrd/Sdrd.csproj
+++ b/Sdrd/Sdrd/Sdrd.csproj
@@ -62,6 +62,8 @@
     <Compile Include="UI\Page\Panel_Sdrdxm.cs" />
     <Compile Include="Utilities\SdrdWSUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Page\Form_Sdrdxm_Base.cs" />
+    <Compile Include="UI\Page\Form_Sdrdxm_Confirm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Acr.UserDialogs, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
